* Escape quotes when compiling attribute, `:not`, and `:contains` selectors. [jddalton]

* Standardize variable names with prefixes:
  `ctx` for context vars, `str` for string, `re` for regexps, `cpl` for compiler constants, `test` for simulated regexp tests, and `cache`. [jddalton]

* Tweak compiled source for ancestor and child combinators. [Diego Perini, jddalton]

* Make compileSelector() compile context specific functions, but only cache those from contexts that match the host document type. [Diego Perini, jddalton]

* Tweak byId(), avoid byTag() when possible, fix minor `RE_SIMPLE_SELECTOR` regression, and simplify gEBN bug checks. [jddalton]

* Remove `this` dependency from setQSA() and rename `RE_BUGGY_QSAPI` to `RE_BUGGY_QSA`. [Diego Perini, jddalton]

* Add support for performing selectors on document fragments by treating them as `notHTML`. [jddalton]

* Tweak compiled id/tag selector code and ensure s.getAttribute() returns an empty string when getAttributeNode() is null. [jddalton]

* Remove registerSelector()/registerOperator() API and expose NW.Dom.Selectors/NW.Dom.Operators allowing developers to overwrite the default selectors with custom ones. [jddalton]

* Ensure select()/match() return an empty array/false for unsupported/invalid selectors. [jddalton]

* Make the definition of `RE_SIMPLE_SELECTOR` more granular, tweak private byName() usage for IE, and simplify the public byClass(), byName(), and byTag(). [jddalton]

* Ensure compileSelector() handles tag selectors as case-insensitive for non-html elements. [jddalton]

* Make non-html elements in byClass() and byName() use client_api() instead of select() and avoid an infinite loop in the `NAME optimization RTL` section of client_api(). [jddalton]

* Add `NAME optimization RTL` to client_api(). [jddalton]

* Change `notHTML` from `!('body' in doc)` to `!('body' in doc) || !('innerHTML' in root)` to correct the feature test for WebKit. [jddalton]
